--- a/_config.yml
+++ b/_config.yml
@@ -24,23 +24,16 @@ baseurl: ""
 
 # social icons and sharing options
 social:
-  - icon:	twitter
-    url:	https://twitter.com/dirkfabisch
-    desc: Follow me on twitter
-    share_url: http://twitter.com/share
-    share_title: ?text=
-    share_link: "&amp;url="
+  - icon:	instagram
+    url:	https://twitter.com/eveeqin
+    desc: Follow me on eveeqin
+    share_url: 
+    share_title: 
+    share_link: 
 
-#  - icon:	facebook
-#    url:	https://facebook.com/???
-#    desc: Connect with me facebook
-#    share_url: //www.facebook.com/sharer.php
-#    share_title: ?t=
-#    share_link: "&amp;u="
-
-  - icon:	github
-    url:	https://github.com/dirkfabisch
-    desc:	Fork me on github
+  - icon:	weibo
+    url:	http://weibo.com/eveeqin
+    desc:	Follow me on Weibo
     share_url:
     share_title:
     share_link:
